# strack

./: .gitignore  CMakeLists.txt  readme.md
app/: strack_main.f90
build_scripts/: deploy_linux.sh  deploy_windows.ps1
cmake/: strack_config.f90.in  strack_parallel_mpi.f90.in  strack_parallel_serial.f90.in
docs/developer/: architecture.md
docs/user/: build_run.md  output_reporting.md  ray_sampling_and_boundaries.md  usage.md  usage_mpi.md  vacuum_surface_sampling.md
src/: strack_geometry.f90  strack_input.f90  strack_kinds.f90  strack_output.f90  strack_runtime.f90  strack_solver.f90  strack_string.f90  strack_types.f90
tools/: generate_pin_lattice_validation.py  pack_input.py  run_validation.py
validation/: README.md  case_overview_zh.md
validation/cases/: homogeneous_cube_1g.md  homogeneous_cube_1g.xml  homogeneous_square_2g.md  homogeneous_square_2g.xml  jeff15_7x7_explicit_1g.md  jeff15_7x7_explicit_1g.xml  jeff15_7x7_hierarchical_1g.md  jeff15_7x7_hierarchical_1g.xml  jeff15_pincell_explicit_1g.md  jeff15_pincell_explicit_1g.xml  jeff15_pincell_hierarchical_1g.md  jeff15_pincell_hierarchical_1g.xml  reflective_sphere_1g.md  reflective_sphere_1g.xml  slab_1d_1g.md  slab_1d_1g.xml  unstructured_circle_square_2g.md  unstructured_circle_square_2g.xml
validation/homogeneous_cube_1g/: homogeneous_cube_1g.md  homogeneous_cube_1g.xml
validation/homogeneous_square_2g/: homogeneous_square_2g.md  homogeneous_square_2g.xml
validation/jeff15_7x7_explicit_1g/: jeff15_7x7_explicit_1g.md  jeff15_7x7_explicit_1g.xml  jeff15_lwr_1g_mgxs.xml
validation/jeff15_7x7_hierarchical_1g/: jeff15_7x7_hierarchical_1g.md  jeff15_7x7_hierarchical_1g.xml
validation/jeff15_pincell_explicit_1g/: jeff15_pincell_explicit_1g.md  jeff15_pincell_explicit_1g.xml
validation/jeff15_pincell_hierarchical_1g/: jeff15_pincell_hierarchical_1g.md  jeff15_pincell_hierarchical_1g.xml
validation/mgxs/: homogeneous_1g.xml  homogeneous_2g.xml  unstructured_circle_square_2g.xml
validation/reflective_sphere_1g/: reflective_sphere_1g.md  reflective_sphere_1g.xml  sphere_1g_mgxs.xml
validation/results/: README.md
validation/slab_1d_1g/: slab_1d_1g.md  slab_1d_1g.xml  slab_1g_mgxs.xml
validation/unstructured_circle_square_2g/: unstructured_circle_square_2g.md  unstructured_circle_square_2g.xml
